<resources>
    <string name="app_name">RandomMenu</string>
    <string name="note">Note</string>
    <string name="random">Random</string>
    <string name="navigation">Navigation</string>
    <string name="restaurants">Restaurants</string>
    <string name="settings">Settings</string>
    <string name="my_favorites">My Favorites</string>
    <string name="to_cook">To Cook</string>
    <string name="to_eat">To Eat</string>
    <string name="all_categories">All Categories</string>
    <string name="tag_format">%s (%d)</string>
    <string name="food_name">Food Name</string>
    <string name="tags">Tags</string>
    <string name="edit_image">Edit Image</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="like">Like</string>
    <string name="undo_like">Undo Like</string>
    <string name="input_content">Input Content</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="tag">Tag</string>
    <string name="clear">Clear</string>
    <string name="confirm">Confirm</string>
    <string name="prefer_tags">Prefer Tags</string>
    <string name="exclude_tags">Exclude Tags</string>
    <string name="food_count">Count: %d</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="reshuffle">Reshuffle</string>
    <string name="save_as_draft">You have unsaved changes.\\nDo you want to save it as draft?</string>
    <string name="empty_food_name">Food name cannot be empty!</string>
    <string name="food_exists">Food name already exists!</string>
    <string name="at_least_one_tag">Food must have at least 1 tag!\\n Do you want to enable Auto-Tag mode?</string>
    <string name="delete_food">Delete Food</string>
    <string name="delete_tag">Do you want to delete tag \"%s\"?</string>
    <string name="ask_delete">Do you want to delete \"%s\"?</string>
    <string name="tag_exists">Tag already exists!</string>
    <string name="input_tag">Input Tag</string>
    <string name="tag_limit">You can only have up to 10 tags!</string>
    <string name="save_image">Save Image</string>
    <string name="ask_save">Do you want to save your changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort By Name</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="ask_delete_food">Do you want to delete this food?</string>
    <string name="more">More</string>
    <string name="save_image_msg">Image has been saved!</string>
    <string name="created_at">Created At: %s</string>
    <string name="hide_recent">Don\'t appear in recent %d shuffles.</string>
    <string name="hide_item">Don\'t appear recently</string>
    <string name="show_item">Allow appear.</string>
    <string name="food_pool_reset">Reset!</string>
    <string name="like_food">Like this food</string>
    <string name="remove_from_list">Do you want to remove “%s\" from your list?</string>
    <string name="undo">Undo</string>
    <string name="item_removed">\"%s\" is removed.</string>
    <string name="share">Share</string>
    <string name="share_item">Share \"%s\" to</string>
    <string name="select_image">Select Image</string>
    <string name="dislike_food">Dislike food</string>
    <string name="history">History</string>
    <string name="no_food_image">No food images</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="export_data">Export Data</string>
    <string name="placeholder">Placeholder</string>
    <string name="clear_cache_msg">Cache cleared!</string>
    <string name="export_data_msg">Data exported!</string>
    <string name="share_image">Share image</string>
    <string name="clearing_cache">Clearing cache…</string>
    <string name="exporting_data">Exporting data…</string>
    <string name="save_data">Save data</string>
    <string name="data_saved">Data saved!</string>
    <string name="draft_deleted">Draft deleted!</string>
    <string name="delete_draft">Delete Draft</string>
    <string name="note_copied">Note has been copied!</string>
    <string name="name_copied">Food name has been copied!</string>
    <string name="save_all_images">Save All Images</string>
    <string name="count_images_saved">%d images are saved.</string>
    <string name="set_cover">Set As Cover</string>
    <string name="add">Add</string>
    <string name="input_food">Input Food</string>
    <string name="note_hint">Note down anything!</string>
    <string name="import_data">Import Data</string>
    <string name="importing_data">Importing data…</string>
    <string name="import_data_msg">Data imported!</string>
    <string name="move_to_first">Move to first</string>
    <string name="more_settings">More Settings</string>
    <string name="auto_tag">Automatic food tag completion</string>
    <string name="duplicate_food_merge">Duplicate food name found, do you want to merge this two food?</string>
    <string name="tag_auto_added">Tags have been added automatically.</string>
    <string name="auto_tag_failed">Cannot infer tags! Please add at least 1 tag!</string>
    <string name="tag_map">Tag Map</string>
    <string name="keyword_colon">Keyword:</string>
    <string name="tag_map_hint">Input keyword and tags. If a new food has keyword in its name, the mapping tags will be automatically added.</string>
    <string name="tag_colon">Tag:</string>
    <string name="duplicate_tag_mapper">Duplicate keyword is found. Tags have been added into this one.</string>
    <string name="duplicate">Duplicate</string>
    <string name="empty_keyword">Empty keyword!</string>
    <string name="ask_delete_keyword">Do you want to delete keyword \"%s\" and its tags?</string>
    <string name="duplicate_tag_mapper_with_tag_overflow">Duplicate keyword is found but it has too many tags to save!</string>
    <string name="keyword_at_least_one_tag">Keyword must have one tag!</string>
    <string name="tag_header">Tag: </string>
    <string name="note_header">Note: </string>
    <string name="comma">", "</string>
    <string name="export_data_failed">"Data export failed: "</string>
    <string name="file_not_found">File cannot be found!</string>
    <string name="illegal_unzip_target">Only zip files are supported for importing!</string>
    <string name="import_data_failed">Cannot import data：</string>
    <string name="copy_data_failed">Cannot copy data：</string>
    <string name="no_import_image_folder">No food image folder to import!</string>
    <string name="no_import_settings">No settings file to import!</string>
    <string name="incomplete_address">Address is incomplete</string>
</resources>
