<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/edit_food_item"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit" />
    <item
        android:id="@+id/save_image_item"
        android:icon="@drawable/ic_save"
        android:title="@string/save_image" />
    <item
        android:id="@+id/save_all_images_item"
        android:icon="@drawable/ic_save"
        android:title="@string/save_all_images" />
    <item
        android:id="@+id/share_item"
        android:icon="@drawable/ic_share"
        android:title="@string/share_image" />
    <item
        android:id="@+id/like_food_item"
        android:icon="@drawable/ic_like"
        android:title="@string/like" />

    <item
        android:id="@+id/dislike_food_item"
        android:icon="@drawable/ic_undo_like"
        android:title="@string/undo_like" />

    <item
        android:id="@+id/show_food_item"
        android:icon="@drawable/ic_show"
        android:title="@string/show_item" />

    <item
        android:id="@+id/hide_food_item"
        android:icon="@drawable/ic_hide"
        android:title="@string/hide_item" />

    <item
        android:id="@+id/more_item"
        android:icon="@drawable/ic_info"
        android:title="@string/more" />
</menu>