<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/open_camera_item"
        android:icon="@drawable/ic_camera"
        android:title="@string/open_camera" />
    <item
        android:id="@+id/open_gallery_item"
        android:icon="@drawable/ic_gallery"
        android:title="@string/open_gallery" />
    <item
        android:id="@+id/edit_image_item"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_image" />
    <item
        android:id="@+id/remove_image_item"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/set_cover_item"
        android:icon="@drawable/ic_set_cover"
        android:title="@string/set_cover" />
</menu>