<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="600dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/keyword_text"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:maxLength="@integer/maxFoodNameLength"
                android:gravity="center_vertical|start"
                android:text="@string/keyword_colon"/>

            <EditText
                android:id="@+id/keyword_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/tag_text"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:layout_gravity="center"
                android:gravity="center_vertical|start"
                android:text="@string/tag_colon" />

            <AutoCompleteTextView
                android:id="@+id/tag_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:completionThreshold="1"
                android:ems="10"
                android:inputType="text"
                android:maxLength="@integer/maxTagNameLength"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                app:srcCompat="@android:drawable/ic_menu_add" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tags_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="24dp"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/confirm"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/cancel"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>